<resources>
    <!-- application idenitity -->
    <string name="app_name">Sony TV</string>

    <!-- general purpose strings -->
    <string name="loading">Loading...</string>
    <string name="quit">Quit</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="quitConfirmation">Are you sure you want to quit?</string>
    <string name="noItemsFound">No items were found.</string>

    <!-- errors -->
    <string name="error">Error</string>
    <string name="genericErrorMessage">An error occurred.</string>
    <string name="startupError">An error occurred during startup.\n\n%s</string>

    <!-- servers -->
    <string name="selectServerTitle">Settings:</string>
    <string name="searchingForServers">Searching...</string>
    <string name="noServersFound">No supported servers were found.</string>

    <!-- channels -->
    <string name="noChannelsFound">No channels were found.</string>

    <!-- navigation items -->
    <string name="search">Search</string>
    <string name="channels">Channels</string>
    <string name="guide">Guide</string>
    <string name="recordings">Recordings</string>
    <string name="vod">VOD</string>
    <string name="settings">Settings</string>

    <!-- channel video selection -->
    <string name="selectChannelVideos">Configure Videos</string>
    <string name="selectChannelVideosPrompt">Browse local DLNA servers and select channel videos:</string>
    <string name="clearChannelVideos">Clear Videos</string>
    <string name="selectVideos">Select Videos</string>
    <string name="noVideosError">You have not yet selected any videos to play.</string>

    <!-- menu items -->
    <string name="addToFavoriteChannels">Add to favorite channels</string>
    <string name="removeFromFavoriteChannels">Remove from favorite channels</string>
    <string name="recordProgram">Record program</string>
    <string name="recordSeries">Record entire series</string>
    <string name="cancelProgramRecording">Cancel recording</string>
    <string name="cancelSeriesRecording">Cancel series recording</string>
    <string name="addToFavoritePrograms">Add to favorite programs</string>
    <string name="removeFromFavoritePrograms">Remove from favorite programs</string>

    <!-- settings -->
    <string name="useChannelVideo">Use actual channel videos</string>
    <string name="autoPlayOnChannelChange">Play channel videos automatically</string>
    <string name="loopVideoPlayback">Loop playback of fixed length videos</string>

    <!-- search -->
    <string name="searchPrompt">Search for a program:</string>
    <string name="searching">Searching...</string>
    <string name="onDemand">On Demand</string>

    <!-- system search (VOD) -->
    <string name="searchHint">Search Video on Demand</string>
    <string name="searchDescription">Show title</string>
    <string name="videoOnDemand">Video on Demand</string>
    <string name="searchEpg">Search TV shows</string>
    <string name="tvShows">TV Shows</string>
    <string name="confirmRecording">Confirm Recording</string>
    <string name="voicePromptText">Speak a TV show to search for</string>

    <!-- system EPG channel setup activity -->
    <string name="sonyTvChannelsSetup">Set Up Sony TV Channels</string>
    <string name="setupChannelsPrompt">Press the Scan button to set up channels.</string>
    <string name="scanChannels">Scan Channels</string>
    <string name="selectEpgServer">Select EPG Server</string>
    <string name="noEpgServerSet">No EPG server has been set.</string>
    <string name="channelsFound">%d channels found.</string>
    <string name="scanning">Scanning...</string>
    <string name="syncEpg">Sync EPG Data</string>

</resources>
